[package]
name = "zprize-harness"
authors = ["The Aleo Team <hello@aleo.org>"]
version = "0.1.0"
edition = "2021"

[dependencies.snarkvm]
path = "../TrapdoorTech-zprize-verifier-snarkVM"

[dependencies.snarkvm-algorithms]
path = "../TrapdoorTech-zprize-verifier-snarkVM/algorithms"

[dependencies.snarkvm-curves]
path = "../TrapdoorTech-zprize-verifier-snarkVM/curves"

[dependencies.snarkvm-fields]
path = "../TrapdoorTech-zprize-verifier-snarkVM/fields"

[dependencies.snarkvm-r1cs]
path = "../TrapdoorTech-zprize-verifier-snarkVM/r1cs"

[dependencies.snarkvm-utilities]
path = "../TrapdoorTech-zprize-verifier-snarkVM/utilities"

[dependencies.snarkvm-dpc]
path = "../TrapdoorTech-zprize-verifier-snarkVM/dpc"



[dependencies.rand]
version = "0.8"

[dependencies.old-rand]
package = "rand"
version = "0.7"

[dependencies.rstat]
version = "0.6"

[dependencies.rand_core]
version = "0.6"

[dependencies.rayon]
version = "1"

[dependencies.lazy_static]
version = "1.4.0"

[features]
default = []
blst_asm = ["snarkvm/blst_asm"]
profiler = ["snarkvm-algorithms/profiler"]
